RESOLVED FIXED71643
REGRESSION(r99374): GTK+ build of the jsc binary doesn't like the call to initializeMainThread, and crashes
https://bugs.webkit.org/show_bug.cgi?id=71643
Summary REGRESSION(r99374): GTK+ build of the jsc binary doesn't like the call to ini...
Filip Pizlo
Reported 2011-11-06 16:35:42 PST
This call was inserted in http://trac.webkit.org/changeset/99374. It's really only needed if you are using SAMPLING_REGIONS. Best approach is to probably disable that call if SAMPLING_REGIONS are not in use, since they are an optional feature. Patch on the way.
Attachments
the patch (1.11 KB, patch)
2011-11-06 16:45 PST, Filip Pizlo
sam: review+
Filip Pizlo
Comment 1 2011-11-06 16:45:09 PST
Created attachment 113813 [details] the patch
Filip Pizlo
Comment 2 2011-11-06 18:51:41 PST
Note You need to log in before you can comment on or make changes to this bug.