REGRESSION(r99374): GTK+ build of the jsc binary doesn't like the call to initializeMainThread, and crashes https://bugs.webkit.org/show_bug.cgi?id=71643

Reviewed by Sam Weinig.

* jsc.cpp:
(main):



Canonical link: https://commits.webkit.org/87973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99392 268f45cc-cd09-0410-ab3c-d52691b4dbfc